# medium-projects

./: .gitignore  README.md
config/: secrets.py
grid-search-time-series/data/: water_consumption_100_clusters.csv
grid-search-time-series/src/: main.py  utils.py
live-sentiment-analysis-spark-flask/: README.md  requirements.txt
notebooks/: tweets_client.ipynb
setup-etl-project-2/: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
setup-etl-project-2/alembic_postgres/: Dockerfile  alembic.ini  pyproject.toml
setup-etl-project-2/alembic_postgres/alembic/: env.py
setup-etl-project-2/alembic_postgres/alembic/versions/: 1718027156_create_pokemon_processed.py
setup-etl-project-2/alembic_postgres/config/: constants.py
setup-etl-project-2/scripts/: etl.py  (+7 more)
setup-small-project/: .env  .gitignore  docker-compose.yml  pyproject.toml
setup-small-project/config/: constants.py
setup-small-project/data/processed/: pokemon_processed.csv
setup-small-project/scripts/: load_pokemons.py  save_processed.py
setup-small-project/setup_small_project/: __main__.py  app.py
setup-small-project/setup_small_project/pokemon/: pokemon_raw.py
setup-small-project/setup_small_project/pokemon/persistence/: pokemon_repository.py
setup-small-project/setup_small_project/pokemon/persistence/mongo/: mongo_pokemon_repository.py
setup-small-project/setup_small_project/pokemon/usecases/: get_pokemons_qry.py
setup-small-project/tests/: test_app.py
src/: api.py  spark_client.py  tweets_listener.py
tesla-analysis/: README.md  requirements.txt
(+64 files in other folders)
