[tool.poetry]
name = "alembic_postgres"
version = "0.1.0"
description = ""
authors = ["CHERR4 <jramoncaserofuentes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
